# rail

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
data/: stations.csv
rail/cli/: __init__.py  main.py  utils.py
rail/cli/commands/: __init__.py  availability.py  dates.py  flights.py  live.py  pnr.py  trains.py
rail/core/: __init__.py  builders.py  parsers.py
rail/mcp/: __init__.py  _entry.py  server.py
rail/models/: __init__.py  station.py
rail/models/google_flights/: base.py  dates.py  flights.py
rail/models/indian_railways/: __init__.py  availability.py  base.py  trains.py
rail/search/: __init__.py  availability.py  client.py  dates.py  flights.py  live.py  pnr.py  trains.py
scripts/: generate_station_enum.py
tests/core/: test_builders.py  test_parsers.py
tests/models/: test_station.py  test_train_models.py
